--- a/README.tex
+++ b/README.tex
@@ -1,9 +1,11 @@
-This is the live repository for my current projects concerning generative modeling in science and society.  
+This is the live repository for my current projects concerning generative models in science and society.  
 
 These files are WORKS IN PROGRESS.
 
-The primary reason for utilizing github for research and writing is to show raw evidence of human generated work.
+The primary reason for utilizing github for research and writing is to show raw evidence of human generated work.  LLMs are increasingly being abused.
 
 Diffs are automatically computed and viewable via the commit history.
 
 PDFs must be manually uploaded for now, but .tex files are committed via Overleaf.
+
+main.tex includes postdoc application materials: my background and experience.  This will be phased out from the repo at a later point in time, but will remain while applications are outstanding.
