--- a/MyBibliography1.bib
+++ b/MyBibliography1.bib
@@ -74,6 +74,16 @@
 	year = {2021}}
 
 
+@article{CRITIC2024,
+	archiveprefix = {arXiv},
+	author = {Zhibin Gou and Zhihong Shao and Yeyun Gong and Yelong Shen and Yujiu Yang and Nan Duan and Weizhu Chen},
+	date-added = {2024-03-29 15:37:18 -0600},
+	date-modified = {2024-03-29 15:38:02 -0600},
+	eprint = {2305.11738},
+	primaryclass = {cs.CL},
+	title = {CRITIC: Large Language Models Can Self-Correct with Tool-Interactive Critiquing},
+	year = {2024}}
+
 
 
 @article{MixtureExperts1991,
@@ -87,6 +97,20 @@
 	title = {Adaptive Mixtures of Local Experts},
 	volume = {3},
 	year = {1991}}
+
+
+
+@article{Psillos2001,
+	author = {Psillos, Stathis},
+	date-added = {2024-03-29 14:10:28 -0600},
+	date-modified = {2024-03-29 14:10:54 -0600},
+	doi = {10.1086/392894},
+	journal = {Philosophy of Science},
+	number = {S3},
+	pages = {S13--S24},
+	title = {Is Structural Realism Possible?},
+	volume = {68},
+	year = {2001}}
 
 
 
