--- a/main.tex
+++ b/main.tex
@@ -136,7 +136,7 @@
 
 
 
-Mitigating risk from generative artificial intelligence in science should focus on three areas: innovation of novel architectures, individual use of models, understanding limits of generative scientific discovery. This research plan outlines briefly outlines the research area I would like to work on, lays out a methodology, provides writing samples and summarises my relevant background.
+Assessing the limitations and risks from generative models used for scientific discovery, I focus on three areas: \textbf{i)} innovation of novel generative architectures; \textbf{ii)} responsible individual use of generative models; \textbf{iii)} how networks of scientists use generative models for discovery. This document includes a brief outlines the research area I would like to work on, lays out a methodology, provides writing samples, and summarises my relevant background for the project.
 
 %This research plan proposes to philosophically address and contextualize the current (and perhaps future) capability of generative artificial intelligence with respect to scientific discovery.  
 
@@ -160,7 +160,21 @@ Mitigating risk from generative artificial intelligence in science should focus 
 
 
 
-\section{Mitigating Accumulative Risk from Generative AI in Science}
+\section{Limits and Risks of Generative Scientific Discovery}
+
+
+Generative machine learning models, when used in certain ways, have been demonstrated to produce non-trivial new scientific knowledge.  Are there limits to such knowledge? What risks, if any, might the particular use of generative tools in the context of discovery pose to the scientific method?  To begin to answer these questions I will consider three relevant aspects of generative models and their use in science:  \textbf{i)} innovation in generative model architectures used for discovery; \textbf{ii)} responsible individual use of generative models; \textbf{iii)} how networks of scientists use generative models for scientific discovery.  \\
+
+
+%If new theories are generated, what status should they be afforded?  How would we explain a scientific discovery which was produced by a generative model?
+
+
+
+%\noindent\textbf{Philosophy of Science:}
+
+
+
+
 
 
 %\subsection{Introduction}
@@ -168,36 +182,38 @@ Mitigating risk from generative artificial intelligence in science should focus 
 
 
 
-Consider a phase space, in which each point represents the total state of every human with agency, and every relevant factor of human civilization.  This complex system has, and will have, a \emph{trajectory} in phase space.  In this space there might be `valleys' and `peaks' (attractors and repellors) which represent the grain or currents due to various mechanisms and processes, incentives and disincentives, positive and negative feedback loops, and structural constraints in the world of the system.  What constraints or influences do generative models impart on such an abstract space?
+
+%\subsection{Generative Architectures}
+
+\noindent\textbf{Generative Architectures:} Widely available generative language models (LLMs) have problems, like confabulation, which architectural innovations can mitigate.  A recent example of architectural innovation \citep{FunSearch2024} shows how, in the context of (successful) discovery, confabulations can be overcome.  What kinds of effective architectural innovations should we expect in the future, and are there limits to what we could discover even with an ideal generative model?  Are there potential risks from generative models by scientists which are particular to the context of discovery?
 
 
-Following Atoosa Kasirzadeh’s recent arguments for considering accumulative risk from AI, I view the current state of AI in our civilization through the lens of complex systems theory. \citep{Kasirzadeh2024WIP} I propose building on her arguments by considering three important areas where we should focus efforts to mitigate accumulative risk: \textbf{i)} innovation in generative model architectures which reduce undesirable characteristics; \textbf{ii)} discussing responsible individual use of generative models; \textbf{iii)} monitoring networks of scientists and the use of generative models for scientific discovery. I argue that these are the most crucial components of civilization where it is desirable to build resilience and avoid accumulative risk. Philosophers engaging in interdisciplinary work are well suited to make meaningful contributions towards mitigation of accumulative risk in all three areas.
+I argue that a cluster of innovative generative models can be understood as having \emph{dialectical architectures}.  This understanding can be grounded in the history of philosophical dialogues, from writings as early as Plato.  The structured linguistic arguments between interlocutors is seen as a corrective process.    In this context, the method of a dialectic involves  epistemological principles like \emph{belief revision}, linguistic and conceptual clarity, and ultimately there is justification to believe the process leads the system of interlocutors further towards justified true beliefs.
 
-Widely available generative language models (LLMs) have problems, like confabulation, which architectural innovations can mitigate.  A recent example of architectural innovation \citep{FunSearch2024} shows how, in the context of scientific discovery, confabulations can be overcome.  What kinds of effective architectural innovations should we expect in the future, and are there limits to what we could discover even with an ideal generative model?  Are there potential risks from generative models by scientists which is particular to the context of discovery?
-
-
-A cluster of interesting model architectures I argue can be understood as having \emph{dialectical features}.  This understanding can be grounded in the history of philosophical dialogues between interlocutors, and the notion of dialectic from argumentation theory.  The mechanism of a philosophical dialectic between two or more interlocutors is famous from writings as early as Plato.  Other more sophisticated accounts of a dialectic (with metaphysical implications) were developed from Hegel.  \citep{sep-hegel-dialectics}  Crucially, I take the method of a critical dialectic to involve epistemological principles like \emph{belief revision}, linguistic and conceptual clarity, and ultimately and \emph{ideally} the process leads one further towards justified true beliefs.
+%Other more sophisticated accounts of a dialectic (perhaps with metaphysical implications) were developed from Hegel.  \citep{sep-hegel-dialectics}  
 
 
 
 
-From a systems theory point of view and formal modeling perspective, we could characterize a dialecticical system in terms of agent based modeling, game theory, and information theory.  A `dialectical architecture' for the context of this project thus describes a certain class of systems of interacting and functionally specialized components.  Perhaps the most well-known example of such an architecture is a generative adversarial network (GAN).  GANs learn sub-networks (generator vs. discriminator) which are pitted against each other in a training loop.  The two sub-networks iteratively interact with each other such that the `learned' structure of each sub-net is specialized.  Such an architecture can also be thought of as a two-player minimax game.  \citep{GANS2014}  Another architecture we might consider to be dialectical is so-called Mixture of Experts (MoE) with gating or router networks directing input to specialized sub-net `experts' for processing.  See e.g. \citep{HFMOE} for a primer on MoE models and the original paper \citep{MixtureExperts1991}.  These models have hybrid architectures and seem to rely on a cluster of certain structural systems properties, information or game theoretic principles (i.e. `competitive learning') between interacting sub-components. 
+From a systems theory point of view and formal modeling perspective, we could characterize a dialecticical system in terms of agent based modeling, game theory, and information theory.  A `dialectical architecture' for the context of this project thus describes a certain class of artificial systems with interacting and functionally specialized components.  I consider that perhaps the most well-known example of such an architecture is a generative adversarial network (GAN).  GANs learn sub-networks (generator vs. discriminator) which are pitted against each other in a training loop.  The two sub-networks iteratively interact with each other such that the `learned' structure of each sub-net is specialized.  Such an architecture can also be thought of as a two-player minimax game.  \citep{GANS2014}  Another architecture we might consider to be dialectical is so-called Mixture of Experts (MoE) with gating or router networks directing input to specialized sub-net `experts' for processing.  See e.g. \citep{HFMOE} for a primer on MoE models and the original paper \citep{MixtureExperts1991}.  These models have hybrid architectures and seem to rely on a cluster of certain structural systems properties, information or game theoretic principles (i.e. `competitive learning') between interacting sub-components. Andrew Ng writes in his latest newsletters about the importance of an `agentic workflow' in state of the art models, including multi-agent `reflection' as a tool to overcome limitations of LLMs.\footnote{\href{https://www.deeplearning.ai/the-batch/how-agents-can-improve-llm-performance/}{March 20, 2024 Letter.}}\footnote{\href{https://www.deeplearning.ai/the-batch/agentic-design-patterns-part-2-reflection/}{March 27, 2024 Letter.}}  One example, CRITIC, employs external critiques or checks on LLM outputs through tools like code interpreters, search engines, and calculators.  The authors liken the interactive process between components to fact checking in journalism.  \citep{CRITIC2024}  This is an extremely clear example of current innovation in generative AI towards dialectical architectures.
 
 
 
 %One sub-net, called a \emph{generator} $G$, tries to `fool' the other sub-net (which we call a \emph{discriminator} $D$) by generating a data example which could be mistaken as coming from the same distribution as the original training data set.  For example, in the case of a set of images, $G$ would (again, \emph{ideally}) learn how to generate an image such that $D$ would be ``fooled''.  
 
 
-Game theory in particular provides a useful tool for understanding and characterizing certain properties of complex systems as a dynamic interaction between players.  From a systems theory point of view, there are early game theoretic characterizations of cybernetics from \citep{Ashby1958}. I have argued in my dissertation that such a theoretical foundation clearly applies also in the context of artificial neural networks.  \citep{Beebe2021}  Including in the original GAN paper \citep{GANS2014}, many find game theory to be a useful framework for innovating on neural network architectures.  Particular focus so far appears to be on so-called Stackelberg game understandings of GANs.  See for example the survey in \citep{GameTheoryDLSurvey2022}, and the use of game theory and `adversarial learning' to improve adversarial example vulnerabilities in a model \citep{AdversarialLearning2021}.
+Game theory in particular provides a useful tool for understanding and characterizing certain properties of complex systems as a dynamic interaction between players.  From a systems theory point of view, there are early game theoretic characterizations of cybernetics from \cite{Ashby1958}. I have argued in my dissertation that such a theoretical foundation clearly applies also in the context of artificial neural networks.  \citep{Beebe2021}  Including in the original GAN paper \citep{GANS2014}, many find game theory to be a useful framework for innovating on neural network architectures.  Particular focus so far appears to be on so-called Stackelberg games.  See for example the survey in \cite{GameTheoryDLSurvey2022}. \cite{AdversarialLearning2021} provide another example of the use of game theory and `adversarial learning' to improve adversarial example vulnerabilities in a model .
 
 
 
 
-Games have equilibria, but a dialectical process is sometimes characterized as leading towards or terminating in a `resolution'.  Such a resolution could be understood as a compromise between differences of opinion, synthesis between ideas, or belief in a more approximate truth.  Indeed, one could compare (as Popper does in \citep{PopperCR1963}) the scientific method to a more abstract notion of a dialectical process (like Hegel's) if one is careful to avoid certain pitfalls of the overly broad thesis-antithesis-synthesis framework. Under a restricted sense, I do think that `dialectical' can be responsibly used to describe the class of complex systems I want to discuss.
+Games have equilibria, but a dialectical process is sometimes characterized as leading towards or terminating in a `resolution'.  Such a resolution could be understood as a compromise between differences of opinion, synthesis between ideas, or belief in a more approximate truth.  Indeed, one could compare (as \cite{PopperCR1963} does) the scientific method to a more abstract notion of a dialectical process if one is careful to avoid certain pitfalls of the overly broad thesis-antithesis-synthesis framework. Under a restricted sense, I do think that `dialectical' can be responsibly used to describe the class of complex systems I want to discuss.
 
 
 
-There is a large amount of literature about bias in artificial neural network models.  However, in my opinion this literature focuses mainly on the ethics and corrective procedures in order to balance bias (or even remove the bias totally, which under some  understanding, e.g. that of \citep{Mitchell1980}, is not particularly plausible since effective models learn inductive bias), which I think is missing a much larger potential issue that tech and AI ethicists should be aware of.  Pitting bias against bias in a dialectical architecture seems more plausible to me.  Related is the well-known No Free Lunch result \citep{Wolpertetal1997}, and we should not expect one model to be able to be optimized to handle all biases.  However, a plurality of specialized models interacting with each other seems to exploit somewhat of a loophole if compute is abundant. [STERKENBERG?]
+There is a large amount of literature about bias in artificial neural network models.  However, in my opinion this literature focuses mainly on the ethics and corrective procedures in order to balance bias (or even remove the bias totally, which under some  understanding, e.g. that of \cite{Mitchell1980}, is not particularly plausible since effective models learn inductive bias), which I think is missing a much larger potential issue that tech and AI ethicists should be aware of.  Pitting bias against bias in a dialectical architecture such as in those innovative models discussed briefly above seems to me to be more likely to mitigate issues with generative models.  Related is the well-known No Free Lunch result \citep{Wolpertetal1997}, and we should not expect one model to be able to be optimized to handle all biases.  However, a plurality of specialized (sub-)models interacting with each other seems to be a way out. \\
+
+% Need to finish reading STERKENBERG as I think it applies to last point, but they seem to not be talking about NFL in optimization?  
 
 
 
@@ -211,7 +227,7 @@ There is a large amount of literature about bias in artificial neural network mo
 
 
 
-We might reasonably expect that such kinds of mechanistic components, when properly engineered and combined (also with traditional non-adversarial or non-dialectic components), might be capable of meaningfully mitigating some of the widely acknowledged issues in widespread generative models (e.g. bias, confabulation or hallucination, explainability and interpretability).  However, the architecture of a model will only go so far in promoting responsible use of such models by individuals.  Additionally, when it comes to using generative models for the purposes of advancing scientific knowledge or generating new scientific theories, philosophers should be concerned about an entirely new set of problems and limitations.
+
 
 
 
@@ -221,7 +237,11 @@ We might reasonably expect that such kinds of mechanistic components, when prope
 
 
 
-Specialized and narrow models (e.g. for predicting turbulent flow) are of a wholly different character from large language models (LLMs).  The latter affect many aspects of the work flow of scientists, and arguably the critical thinking process of reading and writing and forming arguments.  Additionally, if we are going to use generative models like LLMs for scientific discovery in areas like fundamental physics (or in borderline areas which may be considered metaphysics by some), there are major resource costs to checking and testing generative claims.  Time and money.  A similar `pollution' point also affects the economic trade offs for peer review.  Generative models are beginning to flood the zone of critical intellectual effort.
+\noindent\textbf{Use of Generative Models:} We might reasonably expect that such kinds of mechanistic components, when properly engineered and combined (also with traditional non-adversarial or non-dialectic components), might be capable of meaningfully mitigating some of the widely acknowledged issues in widespread generative models (e.g. bias, confabulation or hallucination, explainability and interpretability).  However, the architecture of a model will only go so far in promoting responsible use of such models by individuals.  Additionally, when it comes to using generative models for the purposes of advancing scientific knowledge or generating new scientific theories, philosophers should be concerned about an entirely new set of problems and limitations. 
+
+
+
+Specialized and narrow models (e.g. for predicting turbulent flow) are of a wholly different character from large language models (LLMs).  The latter affect many aspects of the work flow of scientists, and arguably the critical thinking process of reading and writing and forming arguments.  Additionally, if we are going to use generative models like LLMs for scientific discovery in areas like fundamental physics (or in borderline areas which may be considered metaphysics by some), there are major resource costs to checking and testing generative claims.  Time and money.  As generative models become more widely used, we must consider generative `pollution' affecting the economic trade offs for peer review.  Generative models are beginning to flood the zone of critical intellectual effort by humans.
 
 
 
@@ -248,7 +268,7 @@ Specialized and narrow models (e.g. for predicting turbulent flow) are of a whol
 
 This is especially important when considering generative AI with the aim of making new scientific discoveries.  Even if we might gain some justificatory support by using dialectical architectures for such discoveries, we should consider whether there may be limits to the kind of scientific knowledge obtainable.  For example, it seems that for certain contexts of discovery, a generative model might produce hypothetical claims using theoretical terms which may or may not be observable.  We know that artificial systems do not interact with the world in the same way that humans do, and if the training data is derived from human interactions with the world, AI models can only be considered to `live' in a derivative `world'.
 
-
+%The `empirical data' for AI is of course derivative on the world as humans experience it.
 
 
 %Perhaps even more troubling, is that the transcendental dialectic point from Kant means that 
@@ -268,37 +288,49 @@ This is especially important when considering generative AI with the aim of maki
 
 
 
-One very interesting new model particular to scientific discovery with a novel architecture was recently published, called FunSearch.  \citep{FunSearch2024}  In addition to combining an LLM with another component to mitigate confabulations, the FunSearch results even arguably provide a form of explanation that philosophers of science might recognize.  In the case of FunSearch, the mathematical result which was obtained was at least communicable in the form of a (low $K$ complexity) program. This ended up providing a positive feedback with the researchers who used such a clear program of results to further discover even better solutions to a problem.
+One very interesting new model particular to scientific discovery with a novel architecture was recently published, called FunSearch.  \citep{FunSearch2024}  In addition to combining an LLM with another component to mitigate confabulations, the FunSearch results even arguably provide a form of explanation that philosophers of science might recognize.  In the case of FunSearch, the mathematical result which was obtained was at least communicable in the form of a (low $K$ complexity) program. This ended up providing a positive feedback with the researchers who used such a clear program of results to further discover even better solutions to a problem. \\
+
+
+
+\noindent\textbf{Risk Framework:} Following Atoosa Kasirzadeh’s recent arguments for considering accumulative risk from AI, I view the current state of AI in our civilization through the lens of complex systems theory. \citep{Kasirzadeh2024WIP} I argue that \textbf{i)-iii)} are crucial components in the complex system where it is desirable to build resilience and avoid accumulative risk. Philosophers engaging in interdisciplinary work are well suited to make meaningful contributions towards mitigation of accumulative risk in all three areas.
+
+%I propose building on her arguments by considering three important areas where we should focus efforts to mitigate accumulative risk: \textbf{i)} innovation in generative model architectures which reduce undesirable characteristics; \textbf{ii)} discussing responsible individual use of generative models; \textbf{iii)} monitoring networks of scientists and the use of generative models for scientific discovery. 
+
+Consider a phase space, in which each point represents the total state of every human with agency, and every relevant factor of human civilization.  This complex system has, and will have, a \emph{trajectory} in phase space.  In this space there might be `valleys' and `peaks' (attractors and repellors) which represent the grain or currents due to various mechanisms and processes, incentives and disincentives, positive and negative feedback loops, and structural constraints in the world of the system.  What constraints or influences do generative models impart on trajectories in such an abstract space? \\
+
+
+\noindent\textbf{Structural Limits:} Dialectical models, as I have construed them, seem capable of genuine scientific discovery.  Perhaps we will run up to structural limits akin to those debated for decades in philosophy of science.  How do we understand the epistemology of such generative models? Would we expect such models to converge on a new theory (or class of new theories), if they can be used in such a way?  It seems plausible to me that we may be able to glean important lessons towards the risks and limits of generative scientific discovery (especially in potential areas like fundamental physics) from historical debates over empiricism, convergent realism and structural realism.  For example, artificially intelligent agents so far seem to follow the empirical `upward path' to constructing structures for interacting with the world (data) as outlined by Psillos \citep{Psillos2001}. See also \citep[\S 3]{sep-structural-realism}.  It seems unlikely we should understand generative scientific discovery from the perspective of `realism' as humans understand it.  Rather, a form of effective or adaptive epistemic structuralism seems more appropriate.  Mathematical functions learn to cope with data primarily by adjusting randomly initialized `pre-theoretical' weights.  This coping is parametric in a way that renders unobservable theoretical terms either redundant or obsolete.
+
+
+
+
+Is such an understanding what we would expect to find in a scaled up version of a dialectical generative model?  Would we expect that such systems continuously find usefully novel and efficiently testable scientific theories which are better than current networks of scientists are capable of coming up with?  Or, will there be diminishing returns?  It seems to me that the history of philosophy of science has important transferable lessons to consider.  There might be sophisticated components of a generated theory (linguistic, mathematical, or otherwise) which exceed the capacity of networks of scientists to efficiently evaluate.  I argue such a potential situation represents a risk from generative AI, and it may happen in an accumulative manner as outlined in \citep{Kasirzadeh2024WIP}. 
+
+%we could call the machine's epistemology ``artificial structural empiricism'':
+
+%So, if the `intelligence' of artificial systems is largely derived from learning effective structural representations of regularities in training data,  
 
 
 
 
 
-
-
-
-
-Are dialectical models capable of genuine scientific discovery, if there is such a thing?  What would scaling arguments look like for hierarchical dialectical models?  Would we expect, as available compute and networks scaled, that such systems continuously find usefully novel and efficiently testable scientific theories which are better than current networks of scientists are capable of coming up with?  Or, will there be diminishing returns?  I think the latter is more reasonable to expect, and think that the history of philosophy has important lessons to consider.
-
-
-The `intelligence' of artificial systems is largely derived from learning structural representations of regularities in training data. We could call this ``artificial structural empiricism'': mathematical functions learn to cope with data primarily by adjusting randomly initialized `pre-theoretical' weights.  This coping is parametric in a way that renders unobservable theoretical terms either redundant or obsolete.  It seems plausible to evaluate generative scientific discovery  (especially in potential areas like fundamental physics) as roughly falling into debates over empiricism, convergent realism and structural realism.  For example, artificially intelligent agents so far seem to follow the empirical `upward path' to structural realism from Psillos, see e.g. \citep[\S 3]{sep-structural-realism}.  The `empirical data' for AI is of course derivative on the world as humans experience it.
-
-
-We should consider whether there might be sophisticated components of a generated theory (linguistic, mathematical, or otherwise) which exceed the capacity of networks of scientists to efficiently evaluate.  I argue such a potential situation represents a risk from generative AI, and it may happen in an accumulative manner as outlined in \citep{Kasirzadeh2024WIP}. 
 
 
 \section{Methodology}
 
 \begin{itemize}
     \item \textbf{Large Language Models.}  I swear I will \textbf{not} use LLMs to summarize literature, write text for my papers, or to help construct ``novel'' arguments or substitute for my own effort and cognition in any way. Any use will be purely for research purposes, in accordance with department guidelines.  If there are no department guidelines, I would work to help create them. 
-    \item \textbf{Transparent Research.}  I can and will use Git version control for my projects, and host them in GitHub repositories for transparency.  (See e.g. \href{https://github.com/CameronBeebe/Structural_Idealism}{Structural Idealism Project} and [THIS DOCUMENT].)  This is a useful tool for evidencing work and mitigating academic misuse of generative models.  Diffs are automatically computed for each commit.
-    \item \textbf{Networking.} I spent almost a decade associated with the Munich Center for Mathematical Philosophy, where networking was heavily emphasized.  I created The SciPhi Initiative, LLC, and have used this organization for tutoring and outreach online and locally in Colorado.  I will use social media, where tech and AI industry experts are also present, to engage in discussion on project topics.
+    \item \textbf{Transparent Research.}  I can and will use Git version control for my projects, and host them in GitHub repositories for transparency.  An updated repository of projects in this proposal can be found \href{https://github.com/CameronBeebe/AI_Research}{here.}  This is a useful tool for evidencing work and mitigating academic misuse of generative models.  Diffs are automatically computed for each commit.
+    
+    %(See e.g. \href{https://github.com/CameronBeebe/Structural_Idealism}{Structural Idealism Project} and 
+    \item \textbf{Networking.} I spent almost a decade associated with the Munich Center for Mathematical Philosophy, where networking was heavily emphasized.  During my Ph.D. at the GSN I was also associated with the Research Center for Neurophilosophy and Ethics of Neurosciences.  I created The SciPhi Initiative, LLC, and have used this organization for tutoring and outreach online and locally in Colorado.  I will use social media, where tech and AI industry experts are also present, to engage in discussion on project topics.
     \item \textbf{Interdisciplinary.}  I value very much interdisciplinary collaboration, and this has been a major characteristic of my previous academic experience at the Munich Center for Mathematical Philosophy and Graduate School of Systemic Neurosciences.
     \item \textbf{Inclusive.}  I want to discuss diverse points of view on these topics.  I find the arguments from John Stuart Mill's \emph{On Liberty} \citep{OnLiberty1859} convincing for considering diverse voices less heard and developing a ``living truth'' rather than a ``dead dogma''.
     \item \textbf{Belief Revision.}  I will revise my beliefs and research goals as compelling new information is presented to me, within the scope of the project.
     \item \textbf{Historical Synthesis}.  There is a lot of work (which predates widespread LLM availability) which deserves attention, critical analysis, and potential synthesis with newer work in AI.
-    \item \textbf{Teaching.}  No use of generative models allowed by students.  Consistent with the methods at the MCMP, when feasible and applicable I believe formal methods and basic programming should be introduced to philosophy students.  See \href{https://github.com/CameronBeebe/Probability_Intro/blob/main/Coins.ipynb}{this jupyter notebook on basic probability as an example of an assignment.}
+    \item \textbf{Teaching.}  No use of generative models allowed by students.  Consistent with the methods at the MCMP, when feasible and applicable I believe formal methods and basic programming should be introduced to philosophy students.  See \href{https://github.com/CameronBeebe/Probability_Intro/blob/main/Coins.ipynb}{this jupyter notebook on basic probability as an example of an assignment.}  I would be interested in teaching a course based loosely on \cite{Ashby1958} \emph{Introduction to Cybernetics}.
     \item \textbf{Publishing.}  Papers on the topics outlined will be submitted to suitable journals.  Potential: \href{https://link.springer.com/collections/dibibiaidb}{Philosophy and Technology Special Issue}
+    \item \textbf{Grants.}  I think we should try to get funding for interdisciplinary philosophical work on topics related to this project proposal.  I think it is possible and also desirable that funding comes from both industry and governmental funding sources.
     
 \end{itemize}
 
